ajout des commandes, ajout des options en cours